<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.thedancercodes.notekeeper.MainActivity">
    <item
            android:id="@+id/action_next"
            android:icon="@drawable/ic_forward_white_24dp"
            android:orderInCategory="100"
            android:title="Next"
            app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="101"
          app:showAsAction="never"/>
</menu>
